fixing button spacing

--- a/src/components/AssetsPage/AssetsPageHeader/AssetsPageHeader.scss
+++ b/src/components/AssetsPage/AssetsPageHeader/AssetsPageHeader.scss
@@ -17,7 +17,7 @@
 }
 
 .buttons > div:nth-of-type(2) {
-  padding: 0 8px;
+  padding: 0 16px;
 }
 
 .buttons {
